developed  about section

--- a/inex.html
+++ b/inex.html
@@ -18,7 +18,55 @@
     <link href="./assets/css/styles.css" rel="stylesheet" />
 </head>
 
-<body>
+<body id="page-top">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-color fixed-top" id="sideNav">
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">
+            <span class="d-block d-lg-none">Vimukthi Gunasekara</span>
+            <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2"
+                    src="./assets/images/Vimukthi_Gunasekara.jpg" alt="..." /></span>
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
+            aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span
+                class="navbar-toggler-icon"></span></button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav">
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Projects</a></li>
+            </ul>
+        </div>
+    </nav>
+    <div class="container-fluid p-0">
+
+        <section class="resume-section" id="about">
+            <div class="resume-section-content">
+                <h1 class="mb-0">
+                    Vimukthi
+                    <span class="text-color">Gunasekara</span>
+                </h1>
+                <div class="subheading mb-5 ">
+                    Court Street, St. Catherines, ON, Canada · (905) 324-8724 ·
+                    <a class="text-color" href="mailto:vimukthisadaruwan65@gmail.com">vimukthisadaruwan65@gmail.com</a>
+                </div>
+                <p class="lead mb-5">I'm a software engineer who is passionate about making contributing to open-source
+                    more approachable, creating technology to elevate people, and building community. I'm hold a <b>
+                        BS.c in Information Technology </b>from the <b> University of Rajarata</b> and a <b> Certificate
+                        in Full Stack Web Development </b> (ongoing) from the <b> University of Toronto</b>.Innovative
+                    problem-solver who is passionate about developing apps with a focus on mobile-first design and
+                    development.Creativity, teamwork, and ability to develop projects from concept to completion are
+                    strong points. Furthermore, I'm an experienced mobile application developer Google Play Store 📱</p>
+                <div class="social-icons">
+                    <a class="social-icon" href="https://www.linkedin.com/in/vimukthi-gunasekara/"><i
+                            class="fab fa-linkedin-in"></i></a>
+                    <a class="social-icon" href="https://github.com/VimukthiGunasekara"><i
+                            class="fab fa-github"></i></a>
+                    <a class="social-icon" href="https://twitter.com/vimu_gunasekara"><i class="fab fa-twitter"></i></a>
+                    <a class="social-icon" href="https://www.instagram.com/vimukthi_gunasekaraa/"><i
+                            class="fab fa-instagram"></i></a>
+                </div>
+            </div>
+        </section>
+        <hr class="m-0" />
+    </div>
 
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
