developed experiance section

--- a/inex.html
+++ b/inex.html
@@ -33,6 +33,7 @@
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Projects</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
             </ul>
         </div>
     </nav>
@@ -115,7 +116,9 @@
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
                         <h3 class="mb-0 ">Budget Tracker Web App</h3>
-                        <div class="mb-3">Budget tracking is essential for anyone who wants to manage their finances well. It helps you stay on top of your spending, so you can make sure you have enough money for all your needs.</div>
+                        <div class="mb-3">Budget tracking is essential for anyone who wants to manage their finances
+                            well. It helps you stay on top of your spending, so you can make sure you have enough money
+                            for all your needs.</div>
                         <ul class="fa-ul mb-0">
                             <li>
                                 <span class="fa-li"><i class="fas fa-check"></i></span>
@@ -127,16 +130,20 @@
                             </li>
                             <li>
                                 <span class="fa-li"><i class="fas fa-check"></i></span>
-                                Tools: HTML-CSS-JavaScript, Foundation Framework, GoogleFonts, Font Awesome, AdviceSlip API, NBP Web API
+                                Tools: HTML-CSS-JavaScript, Foundation Framework, GoogleFonts, Font Awesome, AdviceSlip
+                                API, NBP Web API
                             </li>
                         </ul>
                     </div>
                 </div>
-                
+
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
                         <h3 class="mb-0 ">Team Profile Generator</h3>
-                        <div class="mb-3">Team profile generator is an online tool that helps you create a team profile to achieve your desired goals. This app generates a team profile using the Inquirer module from Node.js and displays the information on a newly created HTML page. This app focused on OOP and TDD using jest.</div>
+                        <div class="mb-3">Team profile generator is an online tool that helps you create a team profile
+                            to achieve your desired goals. This app generates a team profile using the Inquirer module
+                            from Node.js and displays the information on a newly created HTML page. This app focused on
+                            OOP and TDD using jest.</div>
                         <ul class="fa-ul mb-0">
                             <li>
                                 <span class="fa-li"><i class="fas fa-check"></i></span>
@@ -148,7 +155,9 @@
                             </li>
                             <li>
                                 <span class="fa-li"><i class="fas fa-check"></i></span>
-                                Tools: HTML-CSS-JavaScript, Foundation Framework, GoogleFonts, Font Awesome, AdviceSlip API, NBP Web APITools: HTML-CSS-JavaScript, Inquirer module from Node.js, jest-tests, TDD
+                                Tools: HTML-CSS-JavaScript, Foundation Framework, GoogleFonts, Font Awesome, AdviceSlip
+                                API, NBP Web APITools: HTML-CSS-JavaScript, Inquirer module from Node.js, jest-tests,
+                                TDD
                             </li>
                         </ul>
                     </div>
@@ -157,11 +166,13 @@
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
                         <h3 class="mb-0 ">Weather Dashboard</h3>
-                        <div class="mb-3">A weather dashboard application that displays current weather and 5-day forecast for a city.</div>
+                        <div class="mb-3">A weather dashboard application that displays current weather and 5-day
+                            forecast for a city.</div>
                         <ul class="fa-ul mb-0">
                             <li>
                                 <span class="fa-li"><i class="fas fa-check"></i></span>
-                                Summary: A weather dashboard application that displays current weather and a 5-day forecast for a city.
+                                Summary: A weather dashboard application that displays current weather and a 5-day
+                                forecast for a city.
                             </li>
                             <li>
                                 <span class="fa-li"><i class="fas fa-check"></i></span>
@@ -169,16 +180,98 @@
                             </li>
                             <li>
                                 <span class="fa-li"><i class="fas fa-check"></i></span>
-                                Tools: HTML-CSS-JavaScript, Open Weather Map API, GeoLocation API, Foundation Framework  
+                                Tools: HTML-CSS-JavaScript, Open Weather Map API, GeoLocation API, Foundation Framework
                             </li>
                         </ul>
                     </div>
                 </div>
-                
+
             </div>
         </section>
-
         <hr class="m-0" />
+
+        <section class="resume-section" id="experience">
+            <div class="resume-section-content">
+                <h2 class="mb-5">Experience</h2>
+                <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                    <div class="flex-grow-1">
+                        <h3 class="mb-0 ">Software Engineer</h3>
+                        <div class="subheading mb-3">Kanrich Finance Limited - Colombo 7, Sri Lanka</div>
+                        <ul class="fa-ul mb-0">
+                            <li>
+                                <span class="fa-li"><i class="fas fa-check"></i></span>
+                                Developed & implemented financial-based desktop applications using C# & database
+                                administration and development using PL/SQL. (Oracle/11g).
+                            </li>
+                            <li>
+                                <span class="fa-li"><i class="fas fa-check"></i></span>
+                                Follow all best practices in agile methodologies such as daily sync-ups, sprint
+                                planning, sprint grooming, and demo sessions.
+                            </li>
+                            <li>
+                                <span class="fa-li"><i class="fas fa-check"></i></span>
+                                Worked closely with the product UI / UX team for a better customer experience, using
+                                tools such as Figma.
+                            </li>
+                            <li>
+                                <span class="fa-li"><i class="fas fa-check"></i></span>
+                                Working closely with Sri Lankan central bank developers, technical leads, and project
+                                managers.
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="flex-shrink-0"><span class="text-color">May 2018 - Feb 2021</span></div>
+                </div>
+                <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                    <div class="flex-grow-1">
+                        <h3 class="mb-0 ">Software Engineer Intern </h3>
+                        <div class="subheading mb-3">Center for Research & Development, Ministry of Defense in Sri Lanka
+                            - Pitipana, Homagama, Sri Lanka</div>
+                        <ul class="fa-ul mb-0">
+                            <li>
+                                <span class="fa-li"><i class="fas fa-check"></i></span>
+                                Developed, implemented, tested, and published the Braille Character Recognition and
+                                Translation into the Sinhala Text desktop application using C++, C#, and OpenCV.
+                            </li>
+                            <li>
+                                <span class="fa-li"><i class="fas fa-check"></i></span>
+                                Capture braille images and developed an algorithm for image processing and braille
+                                recognition.
+                            </li>
+                            <li>
+                                <span class="fa-li"><i class="fas fa-check"></i></span>
+                                Working closely with Sri Lankan Army and Navy high-rank officers.
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="flex-shrink-0"><span class="text-color">Sep 2017 - May 2018</span></div>
+                </div>
+                <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                    <div class="flex-grow-1">
+                        <h3 class="mb-0 ">Web Developer - Freelancer </h3>
+                        <div class="subheading mb-3">CodeIO International Team</div>
+                        <ul class="fa-ul mb-0">
+                            <li>
+                                <span class="fa-li"><i class="fas fa-check"></i></span>
+                                Developed & implemented the QuizDO Mobile application and Web Application using Java.
+                            </li>
+                            <li>
+                                <span class="fa-li"><i class="fas fa-check"></i></span>
+                                Developed & implemented the Vpac Official business website using WordPress.
+                            </li>
+                            <li>
+                                <span class="fa-li"><i class="fas fa-check"></i></span>
+                                Developed & implemented the FlyMe International Education Consultants website in
+                                Australia using WordPress.
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="flex-shrink-0"><span class="text-color">Jun 2019 - Present</span></div>
+                </div>
+            </div>
+        </section>
+        <hr class="m-0" />
+
     </div>
 
     <!-- Bootstrap core JS-->
