develop publication section /  update project dection and change html file name

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Projects</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#publications">Publications</a></li>
             </ul>
         </div>
     </nav>
@@ -134,6 +135,9 @@
                                 API, NBP Web API
                             </li>
                         </ul>
+                        <br>
+                        <a class="tags" href="https://github.com/cdennis27/budgettrackergroup2">Github</a>
+                        <a class="tags" href="https://cdennis27.github.io/budgettrackergroup2/">Live Preview</a>
                     </div>
                 </div>
 
@@ -160,6 +164,8 @@
                                 TDD
                             </li>
                         </ul>
+                        <br>
+                        <a class="tags" href="https://github.com/VimukthiGunasekara/team-profile-generator">Github</a>
                     </div>
                 </div>
 
@@ -183,6 +189,9 @@
                                 Tools: HTML-CSS-JavaScript, Open Weather Map API, GeoLocation API, Foundation Framework
                             </li>
                         </ul>
+                        <br>
+                        <a class="tags" href="https://github.com/VimukthiGunasekara/weather-dashboard">Github</a>
+                        <a class="tags" href="https://vimukthigunasekara.github.io/weather-dashboard/">Live Preview</a>
                     </div>
                 </div>
 
@@ -267,6 +276,41 @@
                         </ul>
                     </div>
                     <div class="flex-shrink-0"><span class="text-color">Jun 2019 - Present</span></div>
+                </div>
+            </div>
+        </section>
+        <hr class="m-0" />
+
+        <section class="resume-section" id="publications">
+            <div class="resume-section-content">
+                <h2 class="mb-5">Publications</h2>
+                <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                    <div class="flex-grow-1">
+                        <h5 class="mb-0 ">The Best Preferred Product Location Recommendation According to User Context
+                            and the Preferences</h5>
+                        <p>Advances in ICT for Emerging Regions (ICTer), 2017 Seventeenth International Conference · Sep
+                            6, 2017</p>
+                        <ul class="fa-ul mb-0">
+                            <li>
+                                <span class="fa-li"><i class="fas fa-check"></i></span>
+                                ISBN Information: Electronic ISSN: 2472-7598
+                            </li>
+                            <li>
+                                <span class="fa-li"><i class="fas fa-check"></i></span>
+                                INSPEC Accession Number: 17505495
+                            </li>
+                            <li>
+                                <span class="fa-li"><i class="fas fa-check"></i></span>
+                                DOI: 10.1109/ICTER.2017.8257820
+                            </li>
+                            <li>
+                                <span class="fa-li"><i class="fas fa-check"></i></span>
+                                Publisher: IEEE Conference Location: Colombo, Sri Lanka
+                            </li>
+                        </ul>
+                        <br>
+                        <a class="tags" href="https://ieeexplore.ieee.org/document/8257820/">Show Publication</a>
+                    </div>
                 </div>
             </div>
         </section>
