update project section with images

--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
                         <br>
                         <a class="tags" href="https://github.com/cdennis27/budgettrackergroup2">Github</a>
                         <a class="tags" href="https://cdennis27.github.io/budgettrackergroup2/">Live Preview</a>
+                        <img src="./assets/images/budget-tracker.png" class="img-fluid mt-4" alt="Responsive image">
                     </div>
                 </div>
 
@@ -167,6 +168,8 @@
                         </ul>
                         <br>
                         <a class="tags" href="https://github.com/VimukthiGunasekara/team-profile-generator">Github</a>
+                        <img src="./assets/images/Team Profile Generator.png" class="img-fluid mt-4"
+                            alt="Responsive image">
                     </div>
                 </div>
 
@@ -193,6 +196,7 @@
                         <br>
                         <a class="tags" href="https://github.com/VimukthiGunasekara/weather-dashboard">Github</a>
                         <a class="tags" href="https://vimukthigunasekara.github.io/weather-dashboard/">Live Preview</a>
+                        <img src="./assets/images/Weather Dashboard.png" class="img-fluid mt-4" alt="Responsive image">
                     </div>
                 </div>
 
