--- a/index.html
+++ b/index.html
@@ -139,7 +139,8 @@
                         <br>
                         <a class="tags" href="https://github.com/cdennis27/budgettrackergroup2">Github</a>
                         <a class="tags" href="https://cdennis27.github.io/budgettrackergroup2/">Live Preview</a>
-                        <img src="./assets/images/budget-tracker.png" class="img-fluid mt-4" alt="Responsive image">
+                        <img src="./assets/images/budget-tracker.png" class="img-fluid mt-4 pimage"
+                            alt="Responsive image">
                     </div>
                 </div>
 
@@ -167,8 +168,9 @@
                             </li>
                         </ul>
                         <br>
-                        <a class="tags" href="https://github.com/VimukthiGunasekara/team-profile-generator">Github</a>
-                        <img src="./assets/images/Team Profile Generator.png" class="img-fluid mt-4"
+                        <a class="tags" href="https://github.com/cdennis27/budgettrackergroup2">Github</a>
+                        <a class="tags" href="https://cdennis27.github.io/budgettrackergroup2/">Live Preview</a>
+                        <img src="./assets/images/team-profile-generator.png" class="img-fluid mt-4 pimage"
                             alt="Responsive image">
                     </div>
                 </div>
@@ -194,9 +196,10 @@
                             </li>
                         </ul>
                         <br>
-                        <a class="tags" href="https://github.com/VimukthiGunasekara/weather-dashboard">Github</a>
-                        <a class="tags" href="https://vimukthigunasekara.github.io/weather-dashboard/">Live Preview</a>
-                        <img src="./assets/images/Weather Dashboard.png" class="img-fluid mt-4" alt="Responsive image">
+                        <a class="tags" href="https://github.com/cdennis27/budgettrackergroup2">Github</a>
+                        <a class="tags" href="https://cdennis27.github.io/budgettrackergroup2/">Live Preview</a>
+                        <img src="./assets/images/weather-dashboard.png" class="img-fluid mt-4 pimage"
+                            alt="Responsive image">
                     </div>
                 </div>
 
