update skills (add devicon lib) and projects sections

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Vimukthi GUnasekara</title>
     <link rel="icon" type="image/icon" href="assets/images/icon.png" />
     <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
     <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
     <!-- Google fonts-->
     <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet"
@@ -76,14 +77,17 @@
                 <h2 class="mb-5">Skills</h2>
                 <div class="subheading mb-3">Programming Languages & Tools</div>
                 <ul class="list-inline dev-icons">
-                    <li class="list-inline-item"><i class="fab fa-html5"></i></li>
-                    <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
-                    <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
-                    <li class="list-inline-item"><i class="fa-brands fa-bootstrap"></i></li>
-                    <li class="list-inline-item"><i class="fab fa-react"></i></li>
-                    <li class="list-inline-item"><i class="fab fa-node-js"></i></li>
-                    <li class="list-inline-item"><i class="fab fa-npm"></i></li>
-                    <li class="list-inline-item"><i class="fab fa-wordpress"></i></li>
+                    <li class="list-inline-item"> <i class="devicon-html5-plain"></i> </li>
+                    <li class="list-inline-item"> <i class="devicon-css3-plain"></i> </li>
+                    <li class="list-inline-item"> <i class="devicon-javascript-plain"></i> </li>
+                    <li class="list-inline-item"> <i class="devicon-jquery-plain"></i> </li>
+                    <li class="list-inline-item"> <i class="devicon-bootstrap-plain"></i> </li>
+                    <li class="list-inline-item"> <i class="devicon-foundation-plain"></i> </li>
+                    <li class="list-inline-item"> <i class="devicon-nodejs-plain"></i> </li>
+                    <li class="list-inline-item"> <i class="devicon-express-original"></i> </li>
+                    <li class="list-inline-item"> <i class="devicon-react-original"></i> </li>
+                    <li class="list-inline-item"> <i class="devicon-mysql-plain"></i> </li>
+                    <li class="list-inline-item"> <i class="devicon-mongodb-plain"></i> </li>
                 </ul>
                 <div class="subheading mb-3">Workflow</div>
                 <ul class="fa-ul mb-0">
@@ -158,18 +162,15 @@
                             </li>
                             <li>
                                 <span class="fa-li"><i class="fas fa-check"></i></span>
-                                Role: Front-end development.
+                                Role: Sole author.
                             </li>
                             <li>
                                 <span class="fa-li"><i class="fas fa-check"></i></span>
-                                Tools: HTML-CSS-JavaScript, Foundation Framework, GoogleFonts, Font Awesome, AdviceSlip
-                                API, NBP Web APITools: HTML-CSS-JavaScript, Inquirer module from Node.js, jest-tests,
-                                TDD
+                                Tools: HTML-CSS-JavaScript, Inquirer module from Node.js, jest-tests, TDD
                             </li>
                         </ul>
                         <br>
-                        <a class="tags" href="https://github.com/cdennis27/budgettrackergroup2">Github</a>
-                        <a class="tags" href="https://cdennis27.github.io/budgettrackergroup2/">Live Preview</a>
+                        <a class="tags" href="https://github.com/VimukthiGunasekara/team-profile-generator">Github</a>
                         <img src="./assets/images/team-profile-generator.png" class="img-fluid mt-4 pimage"
                             alt="Responsive image">
                     </div>
@@ -188,7 +189,7 @@
                             </li>
                             <li>
                                 <span class="fa-li"><i class="fas fa-check"></i></span>
-                                Role: Front-end development.
+                                Role: Sole author.
                             </li>
                             <li>
                                 <span class="fa-li"><i class="fas fa-check"></i></span>
@@ -196,8 +197,8 @@
                             </li>
                         </ul>
                         <br>
-                        <a class="tags" href="https://github.com/cdennis27/budgettrackergroup2">Github</a>
-                        <a class="tags" href="https://cdennis27.github.io/budgettrackergroup2/">Live Preview</a>
+                        <a class="tags" href="https://github.com/VimukthiGunasekara/weather-dashboard">Github</a>
+                        <a class="tags" href="https://vimukthigunasekara.github.io/weather-dashboard/">Live Preview</a>
                         <img src="./assets/images/weather-dashboard.png" class="img-fluid mt-4 pimage"
                             alt="Responsive image">
                     </div>
