update skills and experiance sections

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     Dundas Street, London, ON, Canada · (905) 324-8724 ·
                     <a class="text-color" href="mailto:vimukthisadaruwan65@gmail.com">vimukthisadaruwan65@gmail.com</a>
                 </div>
-                <p class="lead mb-5">Passionate and solutions-driven web developer with a<b> certificate in full-stack development </b>from <b> the University of Toronto </b>b> and a<b>  BSc in information and technology </b> from <b> the Rajarata University of Sri Lanka.</b>  Develop skills in JavaScript, jQuery, Bootstrap, Foundation, Node.js, Express, TDD, MySQL, MongoDB, Oracle (PL/SQL), WordPress, Shopify and responsive web design. Innovative problem-solver passionate with analytical skills about developing web apps; focused on mobile-first design and development. Strengths in creativity, teamwork, and building projects from ideation to execution.</p>
+                <p class="lead mb-5">Passionate and solutions-driven web developer with a<b> certificate in full-stack development </b>from <b> the University of Toronto </b> and a<b>  BSc in information and technology </b> from <b> the Rajarata University of Sri Lanka.</b>  Develop skills in JavaScript, jQuery, Bootstrap, Foundation, Node.js, Express, TDD, MySQL, MongoDB, Oracle (PL/SQL), WordPress, Shopify and responsive web design. Innovative problem-solver passionate with analytical skills about developing web apps; focused on mobile-first design and development. Strengths in creativity, teamwork, and building projects from ideation to execution.</p>
                 <div class="social-icons">
                     <a class="social-icon" href="https://www.linkedin.com/in/vimukthi-gunasekara/"><i
                             class="fab fa-linkedin-in"></i></a>
@@ -84,6 +84,9 @@
                     <li class="list-inline-item"> <i class="devicon-react-original"></i> </li>
                     <li class="list-inline-item"> <i class="devicon-mysql-plain"></i> </li>
                     <li class="list-inline-item"> <i class="devicon-mongodb-plain"></i> </li>
+                    <li class="list-inline-item"> <i class="devicon-oracle-plain"></i> </li>
+                    <li class="list-inline-item"> <i class="devicon-wordpress-plain"></i> </li>
+                    <li class="list-inline-item"> <i class="devicon-figma-plain"></i> </li>
                 </ul>
                 <div class="subheading mb-3">Workflow</div>
                 <ul class="fa-ul mb-0">
@@ -681,6 +684,10 @@
                         <h3 class="mb-0 ">Web Developer - Freelancer </h3>
                         <div class="subheading mb-3">CodeIO International Team</div>
                         <ul class="fa-ul mb-0">
+                            <li>
+                                <span class="fa-li"><i class="fas fa-check"></i></span>
+                                Developed & implemented the SK-Realtors.ca Official business website using WordPress.
+                            </li>
                             <li>
                                 <span class="fa-li"><i class="fas fa-check"></i></span>
                                 Developed & implemented the QuizDO Mobile application and Web Application using Java.
